force-app/main/default/objects/Content_Usage_Log__c/Content_Usage_Log__c.object-meta.xml
<CustomObject>
    <label>Content Usage Log</label>
    <nameField>
        <displayFormat>CUL-{000000}</displayFormat>
        <label>Content Usage Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Usage Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>