force-app/main/default/objects/Content_Usage_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description
  >Content usage action performed by the partner user.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Viewed</fullName><default>false</default><label
        >Viewed</label></value>
            <value><fullName>Downloaded</fullName><default>false</default><label
        >Downloaded</label></value>
            <value><fullName>Recommended</fullName><default
        >false</default><label>Recommended</label></value>
            <value><fullName>Clicked Recommendation</fullName><default
        >false</default><label>Clicked Recommendation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>