force-app/main/default/objects/Content_Usage_Log__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <description
  >Partner account associated with the content usage event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Content Usage Logs</relationshipLabel>
    <relationshipName>Content_Usage_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>