force-app/main/default/objects/Content_Usage_Log__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <description
  >Partner contact associated with the content usage event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Content Usage Logs</relationshipLabel>
    <relationshipName>Content_Usage_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>