force-app/main/default/objects/Content_Usage_Log__c/fields/Partner_Content__c.field-meta.xml
<CustomField>
    <fullName>Partner_Content__c</fullName>
    <description
  >Partner content asset associated with the usage event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Content</label>
    <referenceTo>Partner_Content__c</referenceTo>
    <relationshipLabel>Usage Logs</relationshipLabel>
    <relationshipName>Usage_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>