force-app/main/default/objects/Content_Usage_Log__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed the content usage action.</description>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Performed_Content_Usage_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>