force-app/main/default/objects/Content_Usage_Log__c/fields/Performed_On__c.field-meta.xml
<CustomField>
    <fullName>Performed_On__c</fullName>
    <description
  >Date and time when the content usage action was performed.</description>
    <label>Performed On</label>
    <type>DateTime</type>
</CustomField>